had to put uppercase on "map"

--- a/AssignmentMod3JS/src/index.html
+++ b/AssignmentMod3JS/src/index.html
@@ -12,25 +12,25 @@
             <img src="img/nostro-palazzo.png"> <br />
             <button class="description">Description</button>
             <button class="availability">Availability</button>
-            <button class="mapView" onclick="window.location = 'mapView.html'"> View Map of Location</button>
+            <button class="mapView" onclick="window.location = 'MapView.html'"> View Map of Location</button>
         </div>
         <div>
             <img src="img/casino-view-penthouse.jpg"> <br />
             <button class="description">Description</button>
             <button class="availability">Availability</button>
-            <button class="mapView" onclick="window.location = 'mapView2.html'"> View Map of Location</button>
+            <button class="mapView" onclick="window.location = 'MapView2.html'"> View Map of Location</button>
         </div>
         <div>
             <img src="img/niagara-view.jpg"> <br />
             <button class="description">Description</button>
             <button class="availability">Availability</button>
-            <button class="mapView" onclick="window.location = 'mapView3.html'"> View Map of Location</button>
+            <button class="mapView" onclick="window.location = 'MapView3.html'"> View Map of Location</button>
         </div>
         <div>
             <img src="img/casa-de-loco.jpg"> <br />
             <button class="description">Description</button>
             <button class="availability">Availability</button>
-            <button class="mapView" onclick="window.location = 'mapView4.html'"> View Map of Location</button>
+            <button class="mapView" onclick="window.location = 'MapView4.html'"> View Map of Location</button>
         </div>
         <div id="info"></div>
     </body>
